db-aws.yaml
# ============================================================
# 1. Namespace
# ============================================================
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic
