stress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scale-out-test
spec:
  replicas: 5
  selector:
    matchLabels:
      app: scale-test
  template:
    metadata:
      labels:
        app: scale-test
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            requests:
              cpu: "1000m"
              memory: "1024Mi"
