ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: petclinic
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /        # 모든 외부 요청(/)을 접수하여
        pathType: Prefix
        backend:
          service:
            name: api-gateway # 위에서 만든 api-gateway 서비스로 전달합니다.
            port:
              number: 8080
